Fix #48: Update the stack to Spring Boot 3 and Java 17